--- a/src/index.css
+++ b/src/index.css
@@ -4,3 +4,6 @@ body {
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
 }
+table, th, td {
+  border: 1px solid black;
+}
